dropshot/tests/fail/bad_channel21.stderr
error: channel handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               websocket_connection: dropshot::WebsocketConnection,
           ) -> dropshot::WebsocketChannelResult
  --> tests/fail/bad_channel21.rs:23:1
   |
23 | / async fn variadic_argument(
24 | |     _rqctx: RequestContext<()>,
25 | |     _param1: Query<QueryParams>,
26 | |     ...
27 | | ) -> dropshot::WebsocketChannelResult {
   | |_____________________________________^

error: endpoint `variadic_argument` must not have a variadic argument
  --> tests/fail/bad_channel21.rs:26:5
   |
26 |     ...
   |     ^^^

warning: missing pattern for `...` argument
  --> tests/fail/bad_channel21.rs:26:5
   |
26 |     ...
   |     ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #145544 <https://github.com/rust-lang/rust/issues/145544>
   = note: `#[warn(varargs_without_pattern)]` (part of `#[warn(future_incompatible)]`) on by default
help: name the argument, or use `_` to continue ignoring it
   |
26 |     _: ...
   |     ++
